<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="35dp"
    android:gravity="center"
    android:orientation="vertical"

    android:padding="16dp"

    >

    <ImageView
        android:id="@+id/personajeimg"
        android:layout_width="299dp"
        android:layout_height="443dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/nombrepnj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mario_font"
        android:text="@string/pnj_name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/mario_font"
        android:text="@string/pnj_description" />

    <TextView
        android:id="@+id/habilidades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/mario_font"
        android:text="@string/pnj_skills" />

    <TextView
        android:id="@+id/caracteristicas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mario_font"

        android:text="@string/caracteristicas" />

    <Button
        android:id="@+id/boton_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mario_font"
        android:text="@string/return_list" />

</LinearLayout>